[package]
name = "rodio"
version = "0.20.1"
license = "MIT OR Apache-2.0"
description = "Audio playback library"
keywords = ["audio", "playback", "gamedev"]
repository = "https://github.com/RustAudio/rodio"
documentation = "https://docs.rs/rodio"
exclude = ["assets/**", "tests/**"]
edition = "2021"

[dependencies]
cpal = { version = "0.15.3", optional = true }
dasp_sample = "0.11.0"
claxon = { version = "0.4.2", optional = true }
hound = { version = "3.3.1", optional = true }
lewton = { version = "0.10", optional = true }
minimp3_fixed = { version = "0.5.4", optional = true }
symphonia = { version = "0.5.4", optional = true, default-features = false }
crossbeam-channel = { version = "0.5.8", optional = true }

rand = { version = "0.9.0", features = ["small_rng", "os_rng"], optional = true }
tracing = { version = "0.1.40", optional = true }

atomic_float = { version = "1.1.0", optional = true }
num-rational = "0.4.2"

[features]
default = ["playback", "flac", "vorbis", "wav", "mp3"]
tracing = ["dep:tracing"]
experimental = ["dep:atomic_float"]
playback = ["dep:cpal"]

flac = ["claxon"]
vorbis = ["lewton"]
wav = ["hound"]
mp3 = ["symphonia-mp3"]
minimp3 = ["dep:minimp3_fixed"]

noise = ["rand"]

wasm-bindgen = ["cpal/wasm-bindgen"]
cpal-shared-stdcxx = ["cpal/oboe-shared-stdcxx"]

symphonia-aac = ["symphonia/aac"]
symphonia-all = [
    "symphonia-aac",
    "symphonia-flac",
    "symphonia-isomp4",
    "symphonia-mp3",
    "symphonia-ogg",
    "symphonia-vorbis",
    "symphonia-wav",
]
symphonia-flac = ["symphonia/flac"]
symphonia-isomp4 = ["symphonia/isomp4"]
symphonia-mp3 = ["symphonia/mp3"]
symphonia-ogg = ["symphonia/ogg"]
symphonia-vorbis = ["symphonia/vorbis"]
symphonia-wav = ["symphonia/wav", "symphonia/pcm", "symphonia/adpcm"]
symphonia-alac = ["symphonia/isomp4", "symphonia/alac"]
symphonia-aiff = ["symphonia/aiff", "symphonia/pcm"]

[dev-dependencies]
quickcheck = "1"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
approx = "0.5.1"
dasp_sample = "0.11.0"
divan = "0.1.14"

[[bench]]
name = "effects"
harness = false

[[bench]]
name = "conversions"
harness = false

[[bench]]
name = "resampler"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[example]]
name = "music_m4a"
required-features = ["symphonia-isomp4", "symphonia-aac"]

[[example]]
name = "noise_generator"
required-features = ["noise"]

[[example]]
name = "into_file"
required-features = ["wav", "mp3"]
