[package]
name = "rodio"
version = "0.21.1"
license = "MIT OR Apache-2.0"
description = "Audio playback library"
keywords = ["audio", "playback", "gamedev"]
repository = "https://github.com/RustAudio/rodio"
documentation = "https://docs.rs/rodio"
exclude = ["assets/**", "tests/**"]
edition = "2021"

[features]
# Default feature set provides audio playback and common format support
default = [
    "playback",
    "recording",
    "flac",
    "mp3",
    "mp4",
    "vorbis",
    "wav",
    "dither",
]

# Core functionality features
#
# Enable audio playback
playback = ["dep:cpal"]
# Enable audio recording
recording = ["dep:cpal", "dep:rtrb"]
# Enable writing audio to WAV files
wav_output = ["dep:hound"]
# Enable structured observability and instrumentation
tracing = ["dep:tracing"]
# Experimental features using atomic floating-point operations
experimental = ["dep:atomic_float"]

# Audio generation features
#
# Enable audio dithering
dither = ["noise"]
# Enable noise generation (white noise, pink noise, etc.)
noise = ["rand", "rand_distr"]

# Platform-specific features
#
# Enable WebAssembly support for web browsers
wasm-bindgen = ["cpal/wasm-bindgen"]

# To decode an audio source with Rodio, you need to enable the appropriate features for *both* the
# demuxer and the decoder.
#
# Audio files consist of a demuxer (container format) and a decoder (audio codec), for example:
# - .mp3 is an MPEG-1 Audio Layer III file, which is a container format that uses the MP3 codec
# - .mp4 is an MPEG-4 container, typically (but not always) with an AAC-encoded audio stream
# - .ogg is an Ogg container with a Vorbis-encoded audio stream
#
# A reasonable set of audio demuxers and decoders for most applications.
flac = ["symphonia-flac"]
mp3 = ["symphonia-mp3"]
mp4 = ["symphonia-isomp4", "symphonia-aac"]
vorbis = ["symphonia-ogg", "symphonia-vorbis"]
wav = ["symphonia-wav", "symphonia-pcm"]

# The following features are combinations of demuxers and decoders provided by Symphonia.
# Unless you are developing a generic audio player, this is probably overkill.
symphonia-all = ["symphonia/all-formats", "symphonia/all-codecs"]

# Combination of decoder and native demuxer provided by Symphonia
symphonia-flac = ["symphonia/flac"]
symphonia-mp1 = ["symphonia/mp1"]   # MPEG-1 Audio Layer I
symphonia-mp2 = ["symphonia/mp2"]   # MPEG-1 Audio Layer II
symphonia-mp3 = ["symphonia/mp3"]   # MPEG-1 Audio Layer III

# Combination of all MPEG-1 audio demuxers and decoders provided by Symphonia
symphonia-mpa = ["symphonia/mpa"]

# Formats (demuxers) provided by Symphonia
symphonia-aiff = ["symphonia/aiff"]
symphonia-caf = ["symphonia/caf"]
symphonia-isomp4 = ["symphonia/isomp4"]
symphonia-mkv = ["symphonia/mkv"]
symphonia-ogg = ["symphonia/ogg"]

# Codecs (decoders) provided by Symphonia
symphonia-aac = ["symphonia/aac"]
symphonia-adpcm = ["symphonia/adpcm"]
symphonia-alac = ["symphonia/alac"]
symphonia-pcm = ["symphonia/pcm"]
symphonia-vorbis = ["symphonia/vorbis"]
symphonia-wav = ["symphonia/wav"]

# Enable SIMD optimisations for Symphonia
symphonia-simd = ["symphonia/opt-simd"]

# Alternative decoders and demuxers
claxon = ["dep:claxon"]         # FLAC
hound = ["dep:hound"]           # WAV
minimp3 = ["dep:minimp3_fixed"] # MP3
lewton = ["dep:lewton"]         # Ogg Vorbis

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cpal = { version = "0.17.0", optional = true }
dasp_sample = "0.11.0"
claxon = { version = "0.4.2", optional = true }
hound = { version = "3.5", optional = true }
lewton = { version = "0.10", optional = true }
minimp3_fixed = { version = "0.5.4", optional = true }
symphonia = { version = "0.5.4", optional = true, default-features = false }
crossbeam-channel = { version = "0.5.15", optional = true }
thiserror = "2"

rand = { version = "0.9", features = ["small_rng"], optional = true }
rand_distr = { version = "0.5", optional = true }
tracing = { version = "0.1.40", optional = true }

atomic_float = { version = "1.1.0", optional = true }
rtrb = { version = "0.3.2", optional = true }
num-rational = "0.4.2"

[dev-dependencies]
quickcheck = "1"
rstest = "0.25"
rstest_reuse = "0.7"
approx = "0.5.1"
divan = "0.1.14"
inquire = "0.7.5"

[[bench]]
name = "effects"
harness = false
required-features = ["wav"]

[[bench]]
name = "conversions"
harness = false
required-features = ["wav"]

[[bench]]
name = "resampler"
harness = false
required-features = ["wav"]

[[bench]]
name = "pipeline"
harness = false
required-features = ["wav"]

[[example]]
name = "automatic_gain_control"
required-features = ["playback", "flac"]

[[example]]
name = "basic"
required-features = ["playback", "vorbis"]

[[example]]
name = "callback_on_end"
required-features = ["playback", "wav"]

[[example]]
name = "custom_config"
required-features = ["playback", "wav"]

[[example]]
name = "distortion"
required-features = ["playback"]

[[example]]
name = "distortion_mp3"
required-features = ["playback", "mp3"]

[[example]]
name = "distortion_wav"
required-features = ["playback", "wav"]

[[example]]
name = "distortion_wav_alternate"
required-features = ["playback", "wav"]

[[example]]
name = "error_callback"
required-features = ["playback"]

[[example]]
name = "into_file"
required-features = ["mp3", "wav_output"]

[[example]]
name = "limit_wav"
required-features = ["playback", "wav"]

[[example]]
name = "low_pass"
required-features = ["playback", "wav"]

[[example]]
name = "microphone"
required-features = ["playback", "recording", "wav_output"]

[[example]]
name = "mix_multiple_sources"
required-features = ["playback"]

[[example]]
name = "music_flac"
required-features = ["playback", "flac"]

[[example]]
name = "music_m4a"
required-features = ["playback", "mp4"]

[[example]]
name = "music_mp3"
required-features = ["playback", "mp3"]

[[example]]
name = "music_ogg"
required-features = ["playback", "vorbis"]

[[example]]
name = "music_wav"
required-features = ["playback", "wav"]

[[example]]
name = "noise_generator"
required-features = ["playback", "noise"]

[[example]]
name = "reverb"
required-features = ["playback", "vorbis"]

[[example]]
name = "seek_mp3"
required-features = ["playback", "mp3"]

[[example]]
name = "signal_generator"
required-features = ["playback"]

[[example]]
name = "spatial"
required-features = ["playback", "vorbis"]

[[example]]
name = "stereo"
required-features = ["playback", "vorbis"]
